--- a/apps/ui/requirements.txt
+++ b/apps/ui/requirements.txt
@@ -20,7 +20,7 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 oauthlib==3.3.1
 packaging==25.0
-passlib==1.7.4
+# passlib==1.7.4
 Pygments==2.19.2
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
