--- a/apps/ui/requirements.txt
+++ b/apps/ui/requirements.txt
@@ -1,41 +1,29 @@
-anyio==4.11.0
-arrow==1.3.0
-# bcrypt==4.2.0
-binaryornot==0.4.4
-certifi==2024.8.30
-chardet==5.2.0
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
-cookiecutter==2.6.0
+# ============================================
+# MarkingTheGrade - Dependencias Principales
+# ============================================
+
+# Framework UI Principal
 flet==0.28.3
 flet-cli==0.28.3
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
-oauthlib==3.3.1
-packaging==25.0
-# passlib==1.7.4
-Pygments==2.19.2
-pypng==0.20220715.0
-python-dateutil==2.9.0.post0
+
+# Variables de Entorno
 python-dotenv==1.0.1
-python-slugify==8.0.4
-PyYAML==6.0.3
-qrcode==7.4.2
-repath==0.9.0
+
+# Cliente HTTP (requests preferido, httpx como fallback para móviles)
 requests==2.32.5
-rich==14.1.0
-six==1.17.0
-sniffio==1.3.1
-text-unidecode==1.3
-toml==0.10.2
-types-python-dateutil==2.9.0.20250822
-typing_extensions==4.15.0
+httpx==0.28.1
+
+# Dependencias de requests/httpx
+certifi==2024.8.30
 urllib3==2.5.0
-watchdog==4.0.2
+idna==3.10
+charset-normalizer==3.4.3
+
+# Dependencias de httpx
+anyio==4.11.0
+httpcore==1.0.9
+h11==0.16.0
+sniffio==1.3.1
+
+# Utilidades
+typing-extensions==4.15.0
